--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -2,30 +2,36 @@
 
 <body>
     <div class="container" style="margin-top: 30px;">
-        <h1>Add Data</h1>
-        <form action = "/add" method="POST">
+        <h1>Edit Data</h1>
+        <form action = "/edit/<%= data.id %>" method="POST">
+            <div class="form-group row">
+                <label for="id" class="col-sm-2 col-form-label">ID</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" name="id" id="id" value="<%= data.id %>" readonly>
+                </div>
+            </div>
             <div class="form-group row">
                 <label for="inputString" class="col-sm-2 col-form-label">String</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" name="string" id="string" placeholder="String">
+                    <input type="text" class="form-control" name="string" id="string" value="<%= data.string %>">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputInteger" class="col-sm-2 col-form-label">Integer</label>
                 <div class="col-sm-8">
-                    <input type="number" class="form-control" name="integer" id="integer" placeholder="Integer">
+                    <input type="number" class="form-control" name="integer" id="integer" value="<%= data.integer %>">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputFloat" class="col-sm-2 col-form-label">Float</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" name="float" id="float" placeholder="Float">
+                    <input type="text" class="form-control" name="float" id="float" value="<%= data.float %>">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputDate" class="col-sm-2 col-form-label">Date</label>
                 <div class="col-sm-8">
-                    <input type="date" class="form-control" name="date" id="date" placeholder="End date">
+                    <input type="date" class="form-control" name="date" id="date" value="<%= data.date %>">
                 </div>
             </div>
             <div class="form-group row">
@@ -33,8 +39,8 @@
                 <div class="col-sm-8">
                     <select class="form-control" name="boolean">
                         <option>Choose the boolean ...</option>
-                        <option value="1">True</option>
-                        <option value="0">False</option>
+                        <option value="1" <%= data.boolean == '1' ? "selected":"" %>>True</option>
+                        <option value="0" <%= data.boolean == '0' ? "selected":"" %>>False</option>
                     </select>
                 </div>
             </div>
